--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cores</title>
-    <link rel="shortcut icon" href="../ICONES/IconeCoifeInvertida.png" type="image/x-icon">
+    <link rel="shortcut icon" href="ICONES/IconeCoifeInvertida.png" type="image/x-icon">
 </head>
 <style>
     body{
@@ -65,7 +65,7 @@
 </style>
 <body>
     <div id="main">
-        <div><img src="../ICONES/IconeCoifeInvertida2.png" alt="" class="imagens"></div>
+        <div><img src="ICONES/IconeCoifeInvertida2.png" alt="" class="imagens"></div>
         <div id="main2">
             <div id="cor1" class="cores"></div>
             <div id="cor2" class="cores"></div>
@@ -75,8 +75,8 @@
     </div>
     <div id="imagens">
         
-        <img src="../ICONES/IconeCoife.png" alt="" class="imagens">
-        <img src="../ICONES/IconeCoifeInvertida.png" alt="" class="imagens">
+        <img src="apresentacao/ICONES/IconeCoife.png" alt="" class="imagens">
+        <img src="apresentacao/ICONES/IconeCoifeInvertida.png" alt="" class="imagens">
         
         <h2>Aumente seu brilho com o brilho do sorriso.</h2>
         <img src="https://media.istockphoto.com/id/498570289/pt/foto/engra%C3%A7ado-retrato-de-um-sorridente-com-dentes-brancos-n%C3%A3o-reais-cavalo.jpg?s=612x612&w=0&k=20&c=FwsPdhGNCwL07oDmMjAhu-ZwUrSZDInyqNEygXlqsR8=" alt="" id="cavalo">
@@ -88,3 +88,4 @@
     </div>
 </body>
 </html>
+
