--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </div>
     <div id="imagens">
         
-        <img src="apresentacao/ICONES/IconeCoife.png" alt="" class="imagens">
-        <img src="apresentacao/ICONES/IconeCoifeInvertida.png" alt="" class="imagens">
+        <img src="ICONES/IconeCoife.png" alt="" class="imagens">
+        <img src="ICONES/IconeCoifeInvertida.png" alt="" class="imagens">
         
         <h2>Aumente seu brilho com o brilho do sorriso.</h2>
         <img src="https://media.istockphoto.com/id/498570289/pt/foto/engra%C3%A7ado-retrato-de-um-sorridente-com-dentes-brancos-n%C3%A3o-reais-cavalo.jpg?s=612x612&w=0&k=20&c=FwsPdhGNCwL07oDmMjAhu-ZwUrSZDInyqNEygXlqsR8=" alt="" id="cavalo">
@@ -88,4 +88,5 @@
     </div>
 </body>
 </html>
+
 
