Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
         <h2>Aumente seu brilho com o brilho do sorriso.</h2>
         <img src="https://media.istockphoto.com/id/498570289/pt/foto/engra%C3%A7ado-retrato-de-um-sorridente-com-dentes-brancos-n%C3%A3o-reais-cavalo.jpg?s=612x612&w=0&k=20&c=FwsPdhGNCwL07oDmMjAhu-ZwUrSZDInyqNEygXlqsR8=" alt="" id="cavalo">
         <div id="resumo">
-            <p>Na CoifeOdonto, transformamos o cuidado com o seu sorriso em uma experiência prática, eficiente e personalizada. Nosso sistema inovador permite o cadastro de pacientes e dentistas, com uma agenda digital inteligente para agendamentos e gerenciamento de horários.
-            Com a experiência de nossos profissionais, garantimos um atendimento de qualidade, sempre focado no bem-estar de nossos pacientes. Seja para um simples check-up ou procedimentos mais avançados, nossa missão é oferecer um serviço odontológico ágil, acessível e confiável, utilizando tecnologia de ponta para facilitar cada visita.
+            <p>fizemos um sistema interno de uma clínica odontológica, que seria usado pelos funcionários para todas suas funções, e para os dentistas. onde teria funções para cadastrar clientes e dentistas, junto com o cadastro de consultas e da anamnese, tem também a opção de buscá las e excluí las
             </p>
         </div>
     </div>
